src/objects/Quota_Allocation__c.object
<CustomObject>
    <description>CCF Request Application</description>
    <fields>
        <fullName>Allocation_Instructions__c</fullName>
        <label>Allocation Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Allocation_Validity_Date_From__c</fullName>
        <label>Allocation Validity Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Allocation_Validity_Date_To__c</fullName>
        <label>Allocation Validity Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCF_Request__c</fullName>
        <label>CCF Request</label>
        <referenceTo>CCF_Request_Header__c</referenceTo>
        <relationshipName>Quota_Allocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Recurrence__c</fullName>
        <label>Recurrence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CCF Quota Allocation</label>
    <nameField>
        <displayFormat>Allocation-{0000}</displayFormat>
        <label>Quota Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quota Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>